More Fixes